--- a/CostumeTest/Pages/Confirm.cshtml
+++ b/CostumeTest/Pages/Confirm.cshtml
@@ -7,7 +7,7 @@
     ViewData["Title"] = "Confirm";
 }
 
-<h1>Reservering Bevestigd</h1>
+<h1 style="margin-left: 36%;  margin-top: 2%;">Reservering Bevestigd</h1>
 <form method="post">
 
 
