--- a/ReservationAdmin/Component/GetMonthReservation.razor
+++ b/ReservationAdmin/Component/GetMonthReservation.razor
@@ -20,10 +20,10 @@
 </select>
 
 <select @onchange="(e => GetChoose(e))">
-    <option value="1">Jan</option>
-    <option value="2">Feb</option>
-    <option value="1">Jan</option>
-    <option value="2">Feb</option>
+    <option value="01">Jan</option>
+    <option value="02">Feb</option>
+    <option value="03">Maart</option>
+    <option value="04">April</option>
 </select>
 
 <ChartJsBarChart @ref="_barChart" Config="@_barChartConfig" Width="700" Height="300" />
@@ -40,8 +40,15 @@
     SqlConnection con = new SqlConnection();
     List<double> Result = new List<double>();
     [Parameter]
-    public string Month { get; set; }
+    public int Month { get; set; }
     public string Chose { get; set; }
+
+    public int LastYear = DateTime.Now.Year - 1;
+    public int SecondYear = DateTime.Now.Year - 2;
+    public int ThirdYear = DateTime.Now.Year - 3;
+    public int FourthYear = DateTime.Now.Year - 4;
+    public int FifthYear = DateTime.Now.Year - 5;
+    public int year = DateTime.Now.Year;
 
     protected override void OnInitialized()
     {
@@ -111,6 +118,14 @@
     public void GetChoose(ChangeEventArgs e)
     {
         RemoveData();
+        Month = e.Value;
+        SetLastMonth();
+
+    }
+
+    public void GetChooseWhichMonth(ChangeEventArgs e)
+    {
+        RemoveData();
         Chose = e.Value.ToString();
         if (Chose == "Year")
         {
@@ -155,6 +170,18 @@
     public void SetLastMonth()
     {
 
+        for (int i = 1; i < 31; i++)
+        {
+            con.SqlQuery("SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date` = '"+year+"-" + Month + "-"+i+"'");
+            con.QueryEx();
+            foreach (DataRow dr in con.QueryEx().Rows)
+            {
+
+                _barDataVoorspelling.AddRange(new double[] { Convert.ToDouble(dr[0]) }.Wrap());
+            }
+        }
+
+
         _barChartConfig.Data.Labels.AddRange(new[] { "Jan"});
         _barDataSetWerkelijk.AddRange(new double[] { 8, 5, 3, 7, 2, 5, 3, 7, 9, 10, 11, 12 }.Wrap());
         _barChartConfig.Data.Datasets.Add(_barDataSetWerkelijk);
@@ -168,15 +195,14 @@
     {
         _barChartConfig.Data.Labels.AddRange(new[] { "Jan", "Feb", "Maart", "April", "Mei", "Juni", "Juli", "August", "September", "Oktober", "November", "Decemeber" });
 
-
         for (int i = 1; i < 13; i++)
         {
             con.SqlQuery("SELECT ROUND((year1.Total1+year2.Total2+year3.Total3+year4.Total4+year5.Total5)/5) FROM (" +
-            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date` BETWEEN '2018-" + i + "-1' AND '2018-" + i + "-31') year1," +
-            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date` BETWEEN '2019-" + i + "-1'AND '2019-" + i + "-31') year2," +
-            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` BETWEEN '2017-" + i + "-1'AND '2017-" + i + "-31') year3," +
-            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` BETWEEN '2016-" + i + "-1'AND '2016-" + i + "-31') year4," +
-            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` BETWEEN '2015-" + i + "-1'AND '2015-" + i + "-31') year5)");
+            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date` BETWEEN '"+SecondYear+"-" + i + "-1' AND '2018-" + i + "-31') year1," +
+            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date` BETWEEN '"+LastYear+"-" + i + "-1'AND '2019-" + i + "-31') year2," +
+            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` BETWEEN '"+ThirdYear+"-" + i + "-1'AND '2017-" + i + "-31') year3," +
+            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` BETWEEN '"+FourthYear +"-" + i + "-1'AND '2016-" + i + "-31') year4," +
+            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` BETWEEN '"+FifthYear+"-" + i + "-1'AND '2015-" + i + "-31') year5)");
             con.QueryEx();
             foreach (DataRow dr in con.QueryEx().Rows)
             {
@@ -185,8 +211,16 @@
             }
         }
 
+        for (int i = 1; i < 13; i++)
+        {
+            con.SqlQuery("SELECT COUNT(*) FROM `reservation` WHERE  `Date` BETWEEN '"+ year +"-" + i + "-1' AND '2020-" + i + "-31'");
+            con.QueryEx();
+            foreach (DataRow dr in con.QueryEx().Rows)
+            {
+                _barDataSetWerkelijk.AddRange(new double[] { Convert.ToDouble(dr[0])}.Wrap());
+            }
+        }
 
-        _barDataSetWerkelijk.AddRange(new double[] { 8, 5, 3, 7, 2, 5, 3, 7, 9, 10, 11, 12 }.Wrap());
         _barChartConfig.Data.Datasets.Add(_barDataVoorspelling);
         _barChartConfig.Data.Datasets.Add(_barDataSetWerkelijk);
         AddData();
