--- a/ReservationAdmin/Component/GetMonthReservation.razor
+++ b/ReservationAdmin/Component/GetMonthReservation.razor
@@ -19,11 +19,20 @@
     <option value="Month">Maand</option>
 </select>
 
-<select @onchange="(e => GetChoose(e))">
+<select @onchange="(e => GetChooseWhichMonth(e))">
     <option value="01">Jan</option>
     <option value="02">Feb</option>
     <option value="03">Maart</option>
     <option value="04">April</option>
+    <option value="05">Mei</option>
+    <option value="06">Juni</option>
+    <option value="07">Juli</option>
+    <option value="08">August</option>
+    <option value="09">Sept</option>
+    <option value="10">Okt</option>
+    <option value="11">Nov</option>
+    <option value="12">Nov</option>
+
 </select>
 
 <ChartJsBarChart @ref="_barChart" Config="@_barChartConfig" Width="700" Height="300" />
@@ -40,7 +49,7 @@
     SqlConnection con = new SqlConnection();
     List<double> Result = new List<double>();
     [Parameter]
-    public int Month { get; set; }
+    public int Month { get; set; } = 1;
     public string Chose { get; set; }
 
     public int LastYear = DateTime.Now.Year - 1;
@@ -115,15 +124,15 @@
         };
     }
 
-    public void GetChoose(ChangeEventArgs e)
+    public void GetChooseWhichMonth(ChangeEventArgs e)
     {
         RemoveData();
-        Month = e.Value;
+        Month = Convert.ToInt32(e.Value);
         SetLastMonth();
 
     }
 
-    public void GetChooseWhichMonth(ChangeEventArgs e)
+    public void GetChoose(ChangeEventArgs e)
     {
         RemoveData();
         Chose = e.Value.ToString();
@@ -141,7 +150,7 @@
 
     private async Task RemoveData()
     {
-        for (int i = 1; i < 13; i++)
+        for (int i = 1; i < 31; i++)
         {
             if (_barChartConfig.Data.Labels.Count > 0)
             {
@@ -172,7 +181,22 @@
 
         for (int i = 1; i < 31; i++)
         {
-            con.SqlQuery("SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date` = '"+year+"-" + Month + "-"+i+"'");
+            con.SqlQuery("SELECT COUNT(*)  FROM `reservation` WHERE `Date` = '" + year + "-" + Month + "-" + i + "'");
+            con.QueryEx();
+            foreach (DataRow dr in con.QueryEx().Rows)
+            {
+                string maand = i.ToString()+",";
+                _barDataSetWerkelijk.AddRange(new double[] { Convert.ToDouble(dr[0]) }.Wrap());
+            }
+        }
+        for (int i = 1; i < 31; i++)
+        {
+            con.SqlQuery("SELECT ROUND((year1.Total1+year2.Total2+year3.Total3+year4.Total4+year5.Total5)/5) FROM (" +
+            " (SELECT COUNT(*) as Total1 FROM `reservation` WHERE `Date`='"+SecondYear+"-" + Month + "-"+i+"') year1," +
+            " (SELECT COUNT(*) as Total2 FROM `reservation` WHERE `Date`='"+LastYear+"-" + Month + "-"+i+"') year2," +
+            "(SELECT COUNT(*) as Total3 FROM `reservation` WHERE `Date` = '"+ThirdYear+"-" + Month + "-"+i+"') year3," +
+            "(SELECT COUNT(*) as Total4 FROM `reservation` WHERE `Date` ='"+FourthYear +"-" + Month + "-"+i+"') year4," +
+            "(SELECT COUNT(*) as Total5 FROM `reservation` WHERE `Date` = '"+FifthYear+"-" + Month+ "-"+i+"') year5)");
             con.QueryEx();
             foreach (DataRow dr in con.QueryEx().Rows)
             {
@@ -182,13 +206,15 @@
         }
 
 
-        _barChartConfig.Data.Labels.AddRange(new[] { "Jan"});
-        _barDataSetWerkelijk.AddRange(new double[] { 8, 5, 3, 7, 2, 5, 3, 7, 9, 10, 11, 12 }.Wrap());
+
+
+
+        _barChartConfig.Data.Labels.AddRange(new[] {"1","2","3","4","5","6","7","8","9","10","11","12","13","14","15","16","17","18","19","20","21","22","24","25","26","27","28","29","30","31"});
+        //   _barChartConfig.Data.Labels.AddRange(new [] {1,2,3,4,5,6,7,8,9,10,11,12,13,14,15,16,17,18,19,20,21,22,23,24,25,26,27,28,29,30,31});
         _barChartConfig.Data.Datasets.Add(_barDataSetWerkelijk);
 
         AddData();
     }
-
 
 
     public void GetFutureYear()
