--- a/ReservationAdmin/Component/SelectReservations.razor
+++ b/ReservationAdmin/Component/SelectReservations.razor
@@ -11,6 +11,7 @@
     SqlConnection con = new SqlConnection();
 
 }
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <form>
         <div style="background-color:#D5DAD7; float :left; width: 35%;  height: 100vh;">
             <p style="margin-left: 7%; color: #9597A6; font-size: 24px;padding-top: 5px;    margin-bottom: 5px;">Agenda</p>
@@ -69,7 +70,11 @@
                     <td class="HeadDesign">Naam</td>
                     <td class="HeadDesign">Aantal personen </td>
                     <td class="HeadDesign">Tafel</td>
+                @if (CreateRes.date == DateTime.Today)
+                {
                     <td class="HeadDesign actieTD">Actie</td>
+                }
+                <td class="HeadDesign">Is bevestigt?</td>
                 </tr>
             </thead>
             <tbody>
@@ -80,13 +85,25 @@
                         <td class="nameTD">@dr[5].ToString()</td>
                         <td class="AmountD">@dr[3].ToString()</td>
                         <td class="TableD">@dr[2].ToString()</td>
-                        <td>
-                            <button @onclick="(e => DeleteReservation(dr[7].ToString(),dr[6].ToString()))" class="BlockButton" style=" float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;margin-right: 13px;"><i class="fas fa-window-"></i>&#10060;</button>
-                            @if (CreateRes.date == DateTime.Today)
+                            @{
+
+                                string IsConfirmed = dr[4].ToString();
+                            }
+                            @if (CreateRes.date == DateTime.Today && IsConfirmed == "Ja")
                             {
-                                <button @onclick="(e => UpdateNoShow(dr[6].ToString()))"   class="NoshowButton" style="float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;"><i class="fas fa-eye-slash"></i></button>
-                            }                     
-                        </td>
+                                <td>
+                                    <button @onclick="(e => DeleteReservation(dr[7].ToString()))" class="BlockButton" style=" float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;margin-right: 13px;"><i class="fas fa-window-"></i>&#10060;</button>
+                                    <button @onclick="(e => UpdateNoShow(dr[6].ToString(),dr[7].ToString()))" class="NoshowButton" style="float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;"><i class="fas fa-eye-slash">&#xf070;</i></button>
+                                </td>
+                                    }
+                            else if (IsConfirmed == "Nee")
+                            {
+                                <td>
+                                    <button @onclick="(e => DeleteReservation(dr[7].ToString()))" class="BlockButton" style=" float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;"><i class="fas fa-window-"></i>&#10060;</button>
+                                </td>
+                            }
+
+                        <td class="TableD">@dr[4].ToString()</td>
                     </tr>
                 }
             </tbody>
@@ -116,18 +133,26 @@
         DateInText = CreateRes.date.ToLongDateString();
     }
     //Verwijder de geselecteerde reservering
-    void DeleteReservation(string ReservationID, string GuestID)
+    void DeleteReservation(string ReservationID)
     {
-        con.SqlQuery("DELETE FROM reservation WHERE reservation.id_Reservation = @ReservationID AND reservation.Guest = @GuestID ");
+        con.SqlQuery("DELETE FROM reservation WHERE reservation.id_Reservation = @ReservationID");
         con.Cmd.Parameters.AddWithValue("@ReservationID", ReservationID);
-        con.Cmd.Parameters.AddWithValue("@GuestID", GuestID);
         con.QueryEx();
     }
-    //update de geselecteerde klant die niet is komen opdagen
-    void UpdateNoShow(string GuestID)
+    //update de geselecteerde klant die niet is komen opdagen en verwijder de reservering
+    void UpdateNoShow(string GuestID, string ReservationID)
     {
         con.SqlQuery("UPDATE guest set NoShow = NoShow + 1 WHERE id_Guest = @GuestID ");
         con.Cmd.Parameters.AddWithValue("@GuestID", GuestID);
+        con.QueryEx();
+        //Verwijderd de reservering van de klant die niet is komen opdagen
+        DeleteReservation(ReservationID);
+        UpdatedIsBlocked();
+    }
+
+    void UpdatedIsBlocked()
+    {
+        con.SqlQuery("UPDATE guest SET IsBlocked = 1 where NoShow = 3");
         con.QueryEx();
     }
 }
