--- a/ReservationAdmin/Component/SelectReservations.razor
+++ b/ReservationAdmin/Component/SelectReservations.razor
@@ -93,7 +93,7 @@
                             {
                                 <td>
                                     <button @onclick="(e => DeleteReservation(dr[7].ToString()))" class="BlockButton" style=" float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;margin-right: 13px;"><i class="fas fa-window-"></i>&#10060;</button>
-                                    <button @onclick="(e => UpdateNoShow(dr[6].ToString(),dr[7].ToString()))" class="NoshowButton" style="float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;"><i class="fas fa-eye-slash">&#xf070;</i></button>
+                                    <button @onclick="(e => UpdateNoShow(dr[6].ToString(),dr[7].ToString()))" class="NoshowButton" style="float: left;background-color: #F0F1F7;border: none;border-radius: 10%; width: 36px;height: 28px;"><i class="fa">&#xf070;</i></button>
                                 </td>
                                     }
                             else if (IsConfirmed == "Nee")
