--- a/ReservationAdmin/Component/GetMonthReservation.razor
+++ b/ReservationAdmin/Component/GetMonthReservation.razor
@@ -19,7 +19,7 @@
     <option value="Month">Maand</option>
 </select>
 
-<select @onchange="(e => GetChooseWhichMonth(e))">
+<select @onchange="(e => GetChooseWhichMonth(e))" class="CHidden">
     <option value="01">Jan</option>
     <option value="02">Feb</option>
     <option value="03">Maart</option>
