--- a/ReservationAdmin/Pages/Dashboard.cshtml
+++ b/ReservationAdmin/Pages/Dashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model DashboardModel
 @using System.Diagnostics
 @using Microsoft.AspNetCore.Mvc.ModelBinding
 @using ReservationAdmin.Component;
