--- a/ReservationAdmin/Pages/Index.cshtml
+++ b/ReservationAdmin/Pages/Index.cshtml
@@ -2,21 +2,24 @@
 @model IndexModel
 @using System.Diagnostics
 @using Microsoft.AspNetCore.Mvc.ModelBinding
-@using ReservationAdmin.Component;
+@using ReservationGuest.Components
+
 @{
     ViewData["Title"] = "Home page";
 }
-    <div style=" float:left; height:100vh;  width: 100%; background-color:#43425D;">
-
-        <h2>Login - Reserver</h2>
-        <div class="form-inline  form-group" style="margin-top: 25%;  margin-left: 32%;">
-            <label for="InputAmount"> Wachtwoord</label>
-            <input type="text" class="form-control" required />   
-            <button type="button" class=" btn-ResAdmin btn btn-primary">
-                <a class="navbar-brand" asp-area="" asp-page="/Dashboard">inloggen</a>
-            </button>
-        </div>
-
-    
-        </div>
-        <script src="_framework/blazor.server.js"></script>
+<div style=" float:left; height:100vh;  width: 100%; background-color:#43425D;">
+    <div style=" width: 31%; margin-left: 32%; margin-top: 15%;">
+        <h2>Login - Reserveringsystem</h2>
+        <form  method="post">
+            <div class="form-inline  form-group">
+                <label for="InputAmount"> Wachtwoord</label>
+                <input type="text" name="password" class=" form-control" required />
+                <button type="submit" class="btn btn-primary" style=" margin-top: 12%; margin-right: 4%; margin-left: 60%;">
+                    inloggen
+                </button>
+            </div>
+          
+        </form>
+    </div>
+</div>
+<script src="_framework/blazor.server.js"></script>
